--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -10,15 +10,18 @@ menu:
 
 {{< blocks/cover title="About HortaCloud" image_anchor="bottom" height="min" >}}
 
-<p class="lead">
-Fun fact: HORTA (typically stylized as Horta) stands for “How Outstanding Researchers Trace Axons”
+<p class="lead"> 
+<b>Fun fact</b>: the name "Horta" comes from the name of a tunneling silicon based lifeform from the Star Trek original series episode 25 <a href="http://en.wikipedia.org/wiki/The_Devil_in_the_Dark">"The Devil in the Dark"</a>. Neuron traces in 3D resemble the tunnels such a creature might make in the ground. 
+It can also be conveniently backronymed as "How Outstanding Researchers Trace Axons".
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
 
-This software is based on the Janelia Workstation and developed for the MouseLight Team Project at Janelia Research Campus. 
+This software is based on the Janelia Workstation and was originally developed for and in collaboration with the [MouseLight Team Project](https://www.janelia.org/project-team/mouselight) at Janelia Research Campus. 
+
+Ongoing development and maintenance is funded by Janelia's [Open Science Software Initiative](https://www.janelia.org/open-science/overview/open-science-software-initiative-ossi).
 
 
 {{% /blocks/lead %}}
