added project management board links, and updated others

--- a/content/_index.html
+++ b/content/_index.html
@@ -100,15 +100,17 @@ Horta also provides other useful features, including:
 
 {{< blocks/section >}}
 
-{{% blocks/feature icon="fas fa-microscope" title="Open Science" %}}
+{{% blocks/feature icon="fas fa-microscope" title="Open Science" url="/community/" %}}
 In support of Open Science, Janelia's MouseLight project has shared all of their code and data with the scientific community. We have started the <a href="/community/">HortaCloud community</a> as a way to share this software platform and allow others to leverage and extend it. 
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fab fa-github" title="Contributions welcome" url="https://github.com/JaneliaSciComp/hortacloud" %}}
-As an open source community project, we greatly welcome contributions and Pull Requests. Let us know if you would like to collaborate!
+As an open source community project, we greatly welcome contributions and Pull Requests. 
+The current project status can be viewed on our <a href="https://github.com/orgs/JaneliaSciComp/projects/3">Kanban board</a>. 
+<br>Let us know if you would like to collaborate!
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/HortaCloud" %}}
 For announcement of latest features and other developments.
 {{% /blocks/feature %}}
 
