--- a/content/_team.html
+++ b/content/_team.html
@@ -146,4 +146,6 @@ menu:
 
 </div>
 
+<p style="text-align: center;">Special thanks to Brie Yarbrough for creating the HortaCloud logo.</p>
+
 {{< /blocks/section >}}
