--- a/content/about.html
+++ b/content/about.html
@@ -23,11 +23,9 @@ menu:
 
 {{< blocks/section color="white" >}}
 
-<div style="background-color: #f0f8ff; padding: 15pt 10pt 5pt 10pt; margin-bottom: 20pt; text-align: center;">
-    <p>
-        The following content is reprinted with permission from our <a href="https://aws.amazon.com/blogs/desktop-and-application-streaming/collaborative-neuron-tracing-on-aws/">Collaborative Neuron Tracing on AWS</a> blog post.
-    </p>
-</div>
+{{< alert color="info" >}}
+The following content is reprinted from our <a href="https://aws.amazon.com/blogs/desktop-and-application-streaming/collaborative-neuron-tracing-on-aws/">Collaborative Neuron Tracing on AWS</a> blog post with permission.
+{{< /alert >}}
 
 <div class="container">
       <h2>Introduction</h2> 
