--- a/content/team.html
+++ b/content/team.html
@@ -9,6 +9,11 @@ menu:
 
 {{< blocks/section color="horta-dark" >}}
 
+<div class="text-horta-secondary3" style="margin-bottom: 15pt; text-align: center;">
+HortaCloud was primarily developed by Scientific Computing Software at Janelia Research Campus in collaboration with the Janelia MouseLight project team.
+<br>
+Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough for creating the HortaCloud logo.
+</div>
 
 <h2 style="text-align: center;">Advisors</h2>
 
@@ -145,7 +150,5 @@ menu:
     </div>
 
 </div>
-
-<p style="text-align: center;">Special thanks to Brie Yarbrough for creating the HortaCloud logo.</p>
 
 {{< /blocks/section >}}
