--- a/content/publications.html
+++ b/content/publications.html
@@ -11,15 +11,44 @@ menu:
 
 <h2>Publications</h2>
 
-<p>
+<p class="text-horta-secondary3" style="margin-top: 18pt;">
 If you use HortaCloud in your work, please cite the following publications:
 </p>
 
-<li>
-Winnubst J, Bas E, Ferreira TA, Wu Z, Economo MN, Edson P, Arthur BJ, Bruns C, Rokicki K, Schauder D, Olbris DJ, Murphy SD, Ackerman DG, Arshadi C, Baldwin P, Blake R, Elsayed A, Hasan M, Ramirez D, Dos Santos B, 
-Weldon M, Zafar A, Dudman JT, Gerfen CR, Hantman AW, Korff W, Sternson SM, Spruston N, Svoboda K, Chandrashekar J. 
-<u>Reconstruction of 1,000 Projection Neurons Reveals New Cell Types and Organization of Long-Range Connectivity in the Mouse Brain</u>. Cell. 2019 Sep 19;179(1):268-281.e13. 
-doi: <a href="https://doi.org/10.1016/j.cell.2019.07.042">10.1016/j.cell.2019.07.042</a>
-</li>
+<ul class="publication-list">
+  <li>
+    HortaCloud paper (in prep)
+  </li>
+</ul>
+
+<p class="text-horta-secondary3" style="margin-top: 18pt;">
+HortaCloud has been featured in the following publications:
+</p>
+
+<ul class="publication-list">
+  <!--
+  <li>(morphoFISH citation) (To be added)</li>
+
+  <li>Emily Tenshaw, Mary Lay, Alyssa Stark, Monet Weldon, Cameron Arshadi, Ahmad Elsayed, Daniel Ramirez, Bruno Dos Santos, Amina Zafar, Mashtura Hasan, 
+    Regina Blake, Jayaram Chandrashekar, Tiago A Ferreira . Reconstructing Complete Neurons in Whole Brains Using HortaCloud. 
+    Protocol exchange https://protocols.io/view/reconstructing-complete-neurons-in-whole-brains-us-c9vkz64w
+  </li>
+  -->
+
+  <li>
+    Winnubst J, Bas E, Ferreira TA, Wu Z, Economo MN, Edson P, Arthur BJ, Bruns C, Rokicki K, Schauder D, Olbris DJ, Murphy SD, Ackerman DG, Arshadi C, Baldwin P, Blake R, Elsayed A, Hasan M, Ramirez D, Dos Santos B, 
+    Weldon M, Zafar A, Dudman JT, Gerfen CR, Hantman AW, Korff W, Sternson SM, Spruston N, Svoboda K, Chandrashekar J. 
+    <u>Reconstruction of 1,000 Projection Neurons Reveals New Cell Types and Organization of Long-Range Connectivity in the Mouse Brain</u>. Cell. 2019 Sep 19;179(1):268-281.e13. 
+    doi: <a href="https://doi.org/10.1016/j.cell.2019.07.042">10.1016/j.cell.2019.07.042</a>
+  </li>
+
+  <li>
+    Economo MN, Clack NG, Lavis LD, Gerfen CR, Svoboda K, Myers EW, Chandrashekar J. <u>A platform for brain-wide imaging and reconstruction of individual neurons</u>. 
+    Elife. 2016 Jan 20;5:e10566. doi: <a href="https://doi.org/10.7554/eLife.10566">10.7554/eLife.10566</a> 
+  </li>
+</ul>
+
+    
+
 
 {{< /blocks/section >}}
