fixed embed cards

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,8 @@
 +++
 title = "HortaCloud"
 linkTitle = "HortaCloud"
+description = "HortaCloud is a collaborative platform for neuron annotation in large volumes of light microscopy data."
+images = ["hortacloud_logo.png"]
 +++
 
 {{< blocks/cover image_anchor="top" height="full" color="dark" >}}
