fixed embed metadata

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,7 +1,7 @@
 +++
 title = "HortaCloud"
 linkTitle = "HortaCloud"
-description = "HortaCloud is a collaborative platform for neuron annotation in large volumes of light microscopy data."
+description = "HortaCloud provides an efficient production environment for collaborative and accurate reconstruction of long range projection neurons in light microscopy data. This software, originally developed for Janelia's MouseLight Team Project, has allowed annotators to efficiently reconstruct entire axonal arbors of individual neurons from whole-brain light microscopy data. HortaCloud automates the deployment of the software stack to AWS, and provides a web browser-based interface for annotation with 3D-accelerated volume rendering."
 images = ["hortacloud_logo.png"]
 +++
 
