--- a/content/team.html
+++ b/content/team.html
@@ -10,9 +10,8 @@ menu:
 {{< blocks/section color="horta-dark" >}}
 
 <div class="text-horta-secondary3" style="margin-bottom: 15pt; text-align: center;">
-HortaCloud was primarily developed by Scientific Computing Software at Janelia Research Campus in collaboration with the Janelia MouseLight project team.
-<br>
-Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough for creating the HortaCloud logo.
+HortaCloud was developed by Scientific Computing Software at Janelia Research Campus in collaboration with the Janelia MouseLight project team,<br>
+as well as the Allen Institute for Neural Dynamics. Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough for creating the HortaCloud logo.
 </div>
 
 <h2 style="text-align: center;">Advisors</h2>
@@ -22,42 +21,42 @@ Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Jayaram Chandrashekar</h5>
-            <p class="card-text">Scientific Advisor</p>
+            <p class="card-text">Allen Institute for Neural Dynamics<br>Scientific Advisor</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Joshua T. Dudman</h5>
-            <p class="card-text">Scientific Advisor</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Scientific Advisor</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">David Feng</h5>
-            <p class="card-text">Technical Advisor</p>
+            <p class="card-text">Allen Institute for Neural Dynamics<br>Technical Advisor</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4 col-md-offset-2">
         <div class="person card-body">
             <h5 class="card-title">Tiago Ferreira</h5>
-            <p class="card-text">Scientific Advisor</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Scientific Advisor</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4 col-md-offset-2">
         <div class="person card-body">
             <h5 class="card-title">Wyatt Korff</h5>
-            <p class="card-text">Scientific Advisor</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Scientific Advisor</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4 col-md-offset-2">
         <div class="person card-body">
             <h5 class="card-title">Nelson Spruston</h5>
-            <p class="card-text">Scientific Advisor</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Scientific Advisor</p>
         </div>
     </div>
 
@@ -70,35 +69,35 @@ Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough 
     <div class="col-md-4 col-sm-6 mb-4 col-md-offset-2">
         <div class="person card-body">
             <h5 class="card-title">Jody Clements</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Cristian Goina</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Donald Olbris</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Konrad Rokicki</h5>
-            <p class="card-text">Software Engineering Manager</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineering Manager</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">David Schauder</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
@@ -110,42 +109,42 @@ Contributors are listed in alphabetical order. Special thanks to Brie Yarbrough 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Christopher Bruns</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">Formerly HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Patrick Edson</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">Leap Scientific<br>Software Engineer</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Takashi Kawase</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
     
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Mary Lay</h5>
-            <p class="card-text">Annotator</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Annotator</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Alyssa Stark</h5>
-            <p class="card-text">Annotator</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Annotator</p>
         </div>
     </div>
 
     <div class="col-md-4 col-sm-6 mb-4">
         <div class="person card-body">
             <h5 class="card-title">Rob Svirskas</h5>
-            <p class="card-text">Software Engineer</p>
+            <p class="card-text">HHMI Janelia Research Campus<br>Software Engineer</p>
         </div>
     </div>
 
