added instances page

--- a/content/_index.html
+++ b/content/_index.html
@@ -14,8 +14,8 @@ images = ["hortacloud_logo.png"]
 	<a class="btn btn-lg btn-secondary me-3 mb-4" href="{{< relref "/docs" >}}">
 		Documentation
 	</a>
-	<a class="btn btn-lg btn-primary me-3 mb-4" href="https://hortacloud-portal.janelia.org">
-		Login to HortaCloud-Janelia <i class="fas fa-sign-in-alt ml-1"></i>
+	<a class="btn btn-lg btn-primary me-3 mb-4" href="{{< relref "/instances" >}}">
+		Login to HortaCloud &nbsp;<i class="fas fa-sign-in-alt ml-1"></i>
 	</a>
 	<p></p>
 	{{< blocks/link-down color="white" >}}
